release-candidates/rc3/deployment/kubernetes/aegis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegis-server
spec:
  selector:
    app: aegis-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
